# filospot

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  run_filospot.py  setup.py
conda-recipe/: meta.yaml
filospot/: __init__.py  _widget.py  alignment.py  app.py  config.py  data_navigator.py  filtering.py  main.py  napari.yaml  widgets.py
tests/: conftest.py  test_plugin.py
